syntax = "proto3";

option csharp_namespace = "EchoGrpc";

package EchoGrpc;

service Echo {
  rpc Echo (EchoRequest) returns (EchoResponse) {}
}

message EchoRequest {
  string message = 1;
}

message EchoResponse {
  string message = 1;
}